--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -25,11 +25,26 @@
         <div class="tab-content">
           <div role="tabpanel" class="tab-pane fade in active">
             <div class="btn-group" data-toggle="buttons">
-                <%= o.label :features, class: "btn btn-default" do %><%= radio_button_tag "transmission", form.object.features["Transmission"] = "Automatic", required: true %> Automatic <% end %>
-              <%= o.label :features, class: "btn btn-default" do %><%= radio_button_tag "transmission", form.object.features["Transmission"] = "Manual", required: true %> Manual <% end %>
+                <%= o.label :features, class: "btn btn-default" do %><%= radio_button_tag :transmission, form.object.features["Transmission"] = "Automatic", required: true %> Automatic <% end %>
+              <%= o.label :features, class: "btn btn-default" do %><%= radio_button_tag :transmission, form.object.features["Transmission"] = "Manual", required: true %> Manual <% end %>
                 
             </div>
           </div>
+        </div>
+
+       <h5>Body Type:</h5>
+        <div class="form-group">
+          <%= select_tag(:body_type, options_for_select(Car::BODY_TYPE), include_blank:"Select Body Type", class: "form-control", required: true) %>
+        </div>
+
+       <h5>Mileage:</h5>
+        <div class="form-group">
+          <%= o.label :features do %><%= number_field_tag :mileage, form.object.features["Mileage"], class: "form-control", required: true %><% end %>
+        </div>
+
+       <h5>Price:</h5>
+        <div class="form-group">
+          <%= o.label :features do %><%= number_field_tag :price, form.object.features["Price"], class: "form-control", required: true %><% end %>
         </div>
     <% end %>
 
