--- a/app/views/welcome/_sell.html.erb
+++ b/app/views/welcome/_sell.html.erb
@@ -4,12 +4,12 @@
 		  <% @cars.each do |car| %>
 			<div class="col-sm-6 col-md-4 col-lg-3">
 				<%= image_tag "logo.jpg", class: "img-responsive img-thumbnail", style: "margin-bottom: 20px;" %>				
-				<h4><%= car.year %> <%= car.brand.name %> <%= car.brand.model %></h4>
-				<p>Transmission: Automatic</p>
-				<p>Mileage: <%= car.mileage %> miles</p>
-				<p><b>Price: <%= number_to_currency car.price %></b></p>
+				<h5><%= car.year %> <%= car.brand.name %> <%= car.brand.model %></h5>
+				<p>Transmission: <%= car.features["Transmission"] %></p>
+				<p>Mileage: <%= car.features["Mileage"] %> miles</p>
+				<h5>Price: <%= number_to_currency car.features["Price"] %></b></h5>
 				<br>
-				<%= link_to "See Details", "#", class: "btn btn-primary btn-block" %>
+				<%= link_to "See Details", "#", class: "btn btn-primary btn-block", style: "margin-bottom: 20px;" %>
 			</div>
 		  <% end %>
 		</div>
