--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -34,7 +34,11 @@
 
        <h5>Body Type:</h5>
         <div class="form-group">
+          <% unless form.object.features.has_key? "Body" %>
           <%= select_tag(:body_type, options_for_select(Car::BODY_TYPE), include_blank:"Select Body Type", class: "form-control", required: true) %>
+          <% else %>
+           <%= select_tag(:body_type, options_for_select(Car::BODY_TYPE, form.object.features["Body"]), include_blank:"Select Body Type", class: "form-control") %>
+          <% end %>
         </div>
 
        <h5>Mileage:</h5>
