--- a/app/views/brands/_brands.html.erb
+++ b/app/views/brands/_brands.html.erb
@@ -1,5 +1,4 @@
-
-<h1>Brands</h1>
+<h1>All Brand - Models</h1>
 
 <table>
   <thead>
@@ -22,7 +21,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Brand', new_brand_path %>
