--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -1,33 +1,32 @@
-<%= form_with(model: car, local: true) do |form| %>
-  <% if car.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(car.errors.count, "error") %> prohibited this car from being saved:</h2>
-
-      <ul>
-      <% car.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<% if @car.year.nil? %>
+  <h3>Add New Car</h3>
+<% else %>
+  <h3>Edit Car</h3>
+<% end %>
+<hr>
+<%= form_with(model: @car, remote: true) do |form| %>
 
   <div class="form-group">
-    <%= form.select(:brand_id, @brands.collect{|b| [b.brand_model, b.id]}, {include_blank: "Select Brand - Model Car"}, required: true, class: "form-control") %>
+    <%= form.select(:brand_id, @brands.collect{|b| [b.brand_model, b.id]}, {include_blank: "Select Brand - Model Car"}, required: true, class: "form-control input-lg") %>
   </div>
 
   <div class="form-group">
-    <%= form.select(:year, @year, {include_blank: "Select Year"}, required: true, class: "form-control") %>
+    <%= form.select(:year, @year, {include_blank: "Select Year"}, required: true, class: "form-control input-lg") %>
   </div>
 
     <%= form.fields_for :features do |o| %>
 
-      <h5>Transmission</h5>
+      <h5>Transmission</h5> 
+        <% if form.object.features.has_key?("Transmission") %>
+        Current Transmission: <%= form.object.features["Transmission"] %>
+        <br><br>
+        <% end %>
+
         <div class="tab-content">
           <div role="tabpanel" class="tab-pane fade in active">
             <div class="btn-group" data-toggle="buttons">
-                <%= o.label :features, class: "btn btn-default" do %><%= radio_button_tag :transmission, form.object.features["Transmission"] = "Automatic", required: true %> Automatic <% end %>
-              <%= o.label :features, class: "btn btn-default" do %><%= radio_button_tag :transmission, form.object.features["Transmission"] = "Manual", required: true %> Manual <% end %>
-                
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :transmission, form.object.features["Transmission"] = "Automatic", required: true %> Automatic <% end %>
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :transmission, form.object.features["Transmission"] = "Manual", required: true %> Manual <% end %>
             </div>
           </div>
         </div>
@@ -35,26 +34,170 @@
        <h5>Body Type:</h5>
         <div class="form-group">
           <% unless form.object.features.has_key? "Body" %>
-          <%= select_tag(:body_type, options_for_select(Car::BODY_TYPE), include_blank:"Select Body Type", class: "form-control", required: true) %>
+          <%= select_tag(:body_type, options_for_select(Car::BODY_TYPE), include_blank:"Select Body Type", class: "form-control  input-lg", required: true) %>
           <% else %>
-           <%= select_tag(:body_type, options_for_select(Car::BODY_TYPE, form.object.features["Body"]), include_blank:"Select Body Type", class: "form-control") %>
+           <%= select_tag(:body_type, options_for_select(Car::BODY_TYPE, form.object.features["Body"]), include_blank:"Select Body Type", class: "form-control input-lg") %>
           <% end %>
         </div>
 
        <h5>Mileage:</h5>
         <div class="form-group">
-          <%= o.label :features do %><%= number_field_tag :mileage, form.object.features["Mileage"], class: "form-control", required: true %><% end %>
+          <%= o.label :features do %><%= number_field_tag :mileage, form.object.features["Mileage"], class: "form-control input-lg", required: true %><% end %>
         </div>
 
        <h5>Price:</h5>
         <div class="form-group">
-          <%= o.label :features do %><%= number_field_tag :price, form.object.features["Price"], class: "form-control", required: true %><% end %>
+          <%= o.label :features do %><%= number_field_tag :price, form.object.features["Price"], class: "form-control input-lg", required: true %><% end %>
         </div>
+
+      <h5>Exterior Color:</h5>
+        <div class="form-group">
+          <% unless form.object.features.has_key? "Exterior Color" %>
+          <%= select_tag(:ext_color, options_for_select(Car::EXT_COLOR), include_blank:"Select Exterior Color", class: "form-control input-lg", required: true) %>
+          <% else %>
+           <%= select_tag(:ext_color, options_for_select(Car::EXT_COLOR, form.object.features["Exterior Color"]), include_blank:"Select Exterior Color", class: "form-control input-lg") %>
+          <% end %>
+        </div>
+
+      <h5>Interior Color:</h5>
+        <div class="form-group">
+          <% unless form.object.features.has_key? "Interior Color" %>
+          <%= select_tag(:int_color, options_for_select(Car::INT_COLOR), include_blank:"Select Interior Color", class: "form-control  input-lg", required: true) %>
+          <% else %>
+           <%= select_tag(:int_color, options_for_select(Car::INT_COLOR, form.object.features["Interior Color"]), include_blank:"Select Interior Color", class: "form-control input-lg") %>
+          <% end %>
+        </div>
+
+
+      <h5>Fuel Type</h5> 
+        <% if form.object.features.has_key?("Fuel Type") %>
+        Current Fuel Type: <%= form.object.features["Fuel Type"] %>
+        <br><br>
+        <% end %>
+
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane fade in active">
+            <div class="btn-group" data-toggle="buttons">
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :fuel_type, form.object.features["Fuel Type"] = "Gasoline", required: true %> Gasoline <% end %>
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :fuel_type, form.object.features["Fuel Type"] = "Diesel", required: true %> Diesel <% end %>
+            </div>
+          </div>
+        </div>
+
+      <h5>Drive Type</h5> 
+        <% if form.object.features.has_key?("Drive Type") %>
+        Current Drive Type: <%= form.object.features["Drive Type"] %>
+        <br><br>
+        <% end %>
+
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane fade in active">
+            <div class="btn-group" data-toggle="buttons">
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "FWD", required: true %> FWD <% end %>
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "4x4", required: true %> 4x4 <% end %>
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "RWD", required: true %> RWD <% end %>
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "AWD", required: true %> AWD <% end %>
+            </div>
+          </div>
+        </div>
+
+       <h5>Engine:</h5>
+        <div class="form-group">
+          <%= o.label :features, style: "min-width: 100% !important;" do %><%= text_field_tag :engine, form.object.features["Engine"], class: "form-control input-lg", required: true %><% end %>
+        </div>
+
+      <h5>Seats</h5> 
+        <% if form.object.features.has_key?("Seats") %>
+        Current Seats: <%= form.object.features["Seats"] %>
+        <br><br>
+        <% end %>
+
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane fade in active">
+            <div class="btn-group" data-toggle="buttons">
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :seats, form.object.features["Seats"] = "Cloth", required: true %> Cloth Seats <% end %>
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :seats, form.object.features["Seats"] = "Leather", required: true %> Leather Seats<% end %>
+            </div>
+          </div>
+        </div>
+
+      <h5>Cruise Control</h5> 
+        <% if form.object.features.has_key?("Cruise Control") %>
+        Current Seats: <%= form.object.features["Cruise Control"] %>
+        <br><br>
+        <% end %>
+
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane fade in active">
+            <div class="btn-group" data-toggle="buttons">
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :cruise_control, form.object.features["Cruise Control"] = "Yes", required: true %> Yes <% end %>
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :cruise_control, form.object.features["Cruise Control"] = "No", required: true %> No <% end %>
+            </div>
+          </div>
+        </div>
+
+      <h5>Airco</h5> 
+        <% if form.object.features.has_key?("AC") %>
+        Current AC Settings: <%= form.object.features["AC"] %>
+        <br><br>
+        <% end %>
+
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane fade in active">
+            <div class="btn-group" data-toggle="buttons">
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :ac, form.object.features["AC"] = "Manual", required: true %> Manual <% end %>
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :ac, form.object.features["AC"] = "Climate Control", required: true %> Climate Control <% end %>
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :ac, form.object.features["AC"] = "No AC", required: true %> No <% end %>
+            </div>
+          </div>
+        </div>
+
+        <h5>VIN Number:</h5>
+        <div class="form-group">
+          <%= o.label :features, style: "min-width: 100% !important;" do %><%= text_field_tag :vin, form.object.features["VIN"], class: "form-control input-lg", required: true %><% end %>
+        </div>
+
+      <h5>Rear Camera</h5> 
+        <% if form.object.features.has_key?("Rear Camera") %>
+        Current Seats: <%= form.object.features["Rear Camera"] %>
+        <br><br>
+        <% end %>
+
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane fade in active">
+            <div class="btn-group" data-toggle="buttons">
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :rear_camera, form.object.features["Rear Camera"] = "Yes", required: true %> Yes <% end %>
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :rear_camera, form.object.features["Rear Camera"] = "No", required: true %> No <% end %>
+            </div>
+          </div>
+        </div>
+
+      <h5>Keys</h5> 
+        <% if form.object.features.has_key?("Key") %>
+        Current Seats: <%= form.object.features["Key"] %>
+        <br><br>
+        <% end %>
+
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane fade in active">
+            <div class="btn-group" data-toggle="buttons">
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :key, form.object.features["Key"] = "Classic Key", required: true %> Classic Key <% end %>
+                <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :key, form.object.features["Key"] = "Keyless Ignition", required: true %> Keyless Ignition <% end %>
+            </div>
+          </div>
+        </div>
+
     <% end %>
 
-    <%= form.file_field :image %>
+
+
+
+    <div class="form-group">
+        <strong>Set Main Car Picture:</strong><br>
+          <%= form.file_field :image %>
+    </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Set Car", class: "btn btn-primary btn-lg btn-block" %>
   </div>
 <% end %>
