--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,31 +1,25 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Cars</h1>
+<div class="jumbotron" style="padding-left: 1%; padding-right: 1%">
+  <div class="row">
+      <div class="col-lg-4">
+        <%= link_to new_car_path, remote: true, class: "btn btn-primary btn-lg btn-block" do %> <span class="glyphicon glyphicon-plus"></span> Add New Car <% end %>
+      </div>
+      <div class="col-lg-4">
+        <%= link_to new_brand_path, remote: true, class: "btn btn-primary btn-lg btn-block" do %> <span class="glyphicon glyphicon-plus"></span> Add New Brand - Model <% end %>
+      </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-md-4">
 
-<table>
-  <thead>
-    <tr>
-      <th>Brand</th>
-      <th>Year</th>
-      <th>Features</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @cars.each do |car| %>
-      <tr>
-        <td><%= car.brand_id %></td>
-        <td><%= car.year %></td>
-        <td><%= car.features %></td>
-        <td><%= link_to 'Show', car %></td>
-        <td><%= link_to 'Edit', edit_car_path(car) %></td>
-        <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <div id="car-form" style="display: none;"></div>
+      <div id="brand-form" style="display: none;"></div>
+    </div>
+    <div class="col-md-8">
+      <div id="all-cars"><%= render 'cars' %></div>
+      <div id="all-brand-models" style="display: none;"></div>
+    </div>
+  </div>
+</div>
 
-<br>
-
-<%= link_to 'New Car', new_car_path %>
