--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Car</h1>
+<h1>Add New Car:</h1>
 
-<%= render 'form', car: @car %>
+<%= render 'form' %>
 
 <%= link_to 'Back', cars_path %>
