--- a/app/views/cars/new.js.erb
+++ b/app/views/cars/new.js.erb
@@ -1,2 +1,2 @@
-$("#brand-form").slideUp(1000);
+$("#brand-form, #all-cars, #all-brand-models").slideUp(1000);
 $("#car-form").html("<%= j (render 'form') %>").show(1000);
