--- a/app/views/brands/_form.html.erb
+++ b/app/views/brands/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
 <%= form_with(model: @brand, remote: true) do |form| %>
 
   <div class="form-group">
@@ -12,3 +14,5 @@
     <%= form.submit "Set Brand - Model", class: "btn btn-primary btn-lg btn-block" %>
   </div>
 <% end %>
+</div>
+</div>
