--- a/app/views/brands/new.js.erb
+++ b/app/views/brands/new.js.erb
@@ -1,2 +1,2 @@
-$("#car-form").slideUp(1000);
+$("#car-form, #all-cars, #all-brand-models").slideUp(1000);
 $("#brand-form").html("<%= j (render 'form') %>").show(1000);
