--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,22 +1,25 @@
 
 <div class="jumbotron" style="padding-left: 1%; padding-right: 1%">
   <div class="row">
-      <div class="col-lg-4">
-        <%= link_to new_car_path, remote: true, class: "btn btn-primary btn-lg btn-block" do %> <span class="glyphicon glyphicon-plus"></span> Add New Car <% end %>
+      <div class="col-lg-3">
+        <%= link_to new_car_path, remote: true, class: "btn btn-primary btn-block" do %> <span class="glyphicon glyphicon-plus"></span> Add New Car <% end %>
       </div>
-      <div class="col-lg-4">
-        <%= link_to new_brand_path, remote: true, class: "btn btn-primary btn-lg btn-block" do %> <span class="glyphicon glyphicon-plus"></span> Add New Brand - Model <% end %>
+      <div class="col-lg-3">
+        <%= link_to new_brand_path, remote: true, class: "btn btn-primary btn-block" do %> <span class="glyphicon glyphicon-plus"></span> Add New Brand - Model <% end %>
+      </div>
+      <div class="col-lg-3">
+        <%= link_to cars_path, remote: true, class: "btn btn-primary btn-block" do %> <i class="fa fa-car fa-fw"></i></span> All Car Profiles <% end %>
+      </div>
+      <div class="col-lg-3">
+        <%= link_to brands_path, remote: true, class: "btn btn-primary btn-block" do %> <i class="fa fa-car fa-fw"></i></span> All Brand - Models <% end %>
       </div>
   </div>
   <hr>
   <div class="row">
-    <div class="col-md-4">
-
+    <div class="col-md-12">
 
       <div id="car-form" style="display: none;"></div>
       <div id="brand-form" style="display: none;"></div>
-    </div>
-    <div class="col-md-8">
       <div id="all-cars"><%= render 'cars' %></div>
       <div id="all-brand-models" style="display: none;"></div>
     </div>
