--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -1,5 +1,5 @@
-
-<div class="jumbotron" style="padding-left: 1%; padding-right: 1%">
+<%= render 'navbar' %>
+<div class="jumbotron" style="background: #f8f8f8; padding-left: 1%; padding-right: 1%; padding-top: 70px;">
   <div class="row">
       <div class="col-lg-3">
         <%= link_to new_car_path, remote: true, class: "btn btn-primary btn-block" do %> <span class="glyphicon glyphicon-plus"></span> Add New Car <% end %>
@@ -14,7 +14,7 @@
         <%= link_to brands_path, remote: true, class: "btn btn-primary btn-block" do %> <i class="fa fa-car fa-fw"></i></span> All Brand - Models <% end %>
       </div>
   </div>
-  <hr>
+  <hr style="margin: 10px 0 0 0;">
   <div class="row">
     <div class="col-md-12">
 
