--- a/app/views/welcome/_header.html.erb
+++ b/app/views/welcome/_header.html.erb
@@ -1,4 +1,49 @@
-<header>
+<header style="background-image: none !important;">
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+		    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+		    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+		  </ol>
+
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner" role="listbox">
+		    <div class="item active">
+		      <%= image_tag "header-bg.jpg" %>
+		      <div class="carousel-caption">
+		        <div class="container">
+			        <div class="intro-text">
+			            <div class="intro-lead-in">Welcome To <span style="color: #b30000">SL</span> Autos!</div>
+			            <div class="intro-heading">Servicio Espacializado</div>
+			            <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+			        </div>
+			    </div>
+		      </div>
+		    </div>
+		    <div class="item">
+		      <%= image_tag "contact.jpg" %>
+		      <div class="carousel-caption">
+		        <div class="container">
+			        <div class="intro-text">
+			            <div class="intro-lead-in">Welcome To <span style="color: #b30000">SL</span> Autos!</div>
+			            <div class="intro-heading">Servicio Espacializado</div>
+			            <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+			        </div>
+			    </div>
+		      </div>
+		    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
     <div class="container">
         <div class="intro-text">
             <div class="intro-lead-in">Welcome To <span style="color: #b30000">SL</span> Autos!</div>
