--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,17 @@
 @import "https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400";
 @import "https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700";
 
+#devise-box {
+	position: relative;
+	margin: 10% auto;
+	background: #FFF;
+	width: 350px;
+	border-radius: 13px;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.4);
+	padding: 12px;
+}
+
+/*#login-box {
+	height: 350px;
+}*/
+
