--- a/app/assets/stylesheets/bootstrap_override.scss
+++ b/app/assets/stylesheets/bootstrap_override.scss
@@ -84,10 +84,14 @@ section.devise {
     }
 }
 
-.carousel-inner > .item {
+/*.carousel-inner > .item {
     position: relative;
-    -webkit-transition: 0.6s ease-in-out left;
-    -moz-transition: 0.6s ease-in-out left;
-    -o-transition: 0.6s ease-in-out left;
-    transition: 0.6s ease-in-out left;
+    -webkit-transition: 2s ease-in-out left;
+    -moz-transition: 2s ease-in-out left;
+    -o-transition: 2s ease-in-out left;
+    transition: 2s ease-in-out left;
 }
+*/
+/*.navbar-custom {
+    background-color: #222222;
+}*/
