--- a/app/views/cars/_navbar.html.erb
+++ b/app/views/cars/_navbar.html.erb
@@ -8,23 +8,24 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Cars Panel</a>
+      <%= link_to "Cars Panel", cars_path, class: "navbar-brand", data: { turbolinks: "false" } %>
+<!--       <a class="navbar-brand">Cars Panel</a> -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "HomePage", root_url %></li>
-<!--         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Settings <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><%= link_to root_url do %><span class="glyphicon glyphicon-home"></span> Home Page<% end %></li>
+           <!--  <li><a href="#">Another action</a></li> -->
+            <% if signed_in? && current_user %>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><%= link_to destroy_user_session_path, method: :delete do %><span class="glyphicon glyphicon-log-out"></span> Log Out<% end %></li>
+            <% end %>
           </ul>
-        </li> -->
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
