--- a/app/views/cars/_navbar.html.erb
+++ b/app/views/cars/_navbar.html.erb
@@ -18,7 +18,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Settings <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to root_url do %><span class="glyphicon glyphicon-home"></span> Home Page<% end %></li>
+            <li><%= link_to root_url, data: { turbolinks: "false" } do %><span class="glyphicon glyphicon-home"></span> Home Page<% end %></li>
            <!--  <li><a href="#">Another action</a></li> -->
             <% if signed_in? && current_user %>
             <li role="separator" class="divider"></li>
