--- a/app/views/welcome/_sell.html.erb
+++ b/app/views/welcome/_sell.html.erb
@@ -22,7 +22,7 @@
 				      <div class="modal-body">
 				      	<div class="row">
 				      		<div class="col-lg-12">
-				        		<%= image_tag car.image, class: "img-thumbnail", style: "height: 350px; width: 100%; margin-bottom: 20px;" %>
+				        		<%= image_tag car.image, class: "img-rounded", style: "height: 350px; width: 100%; margin-bottom: 20px;" %>
 				        	</div>
 				        	<div class="col-lg-6">
 				        		<p>Transmission: <%= car.features["Transmission"] %></p>
