--- a/app/views/brands/_brands.html.erb
+++ b/app/views/brands/_brands.html.erb
@@ -1,11 +1,12 @@
-<h1>All Brand - Models</h1>
-
-<table>
+<h3 class="text-center">All Brand - Models</h1>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Brand</th>
       <th>Model</th>
-      <th colspan="3"></th>
+      <th>For Sale</th>
+      <th>Sold</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -14,9 +15,20 @@
       <tr>
         <td><%= brand.name %></td>
         <td><%= brand.model %></td>
-        <td><%= link_to 'Show', brand %></td>
-        <td><%= link_to 'Edit', edit_brand_path(brand) %></td>
-        <td><%= link_to 'Destroy', brand, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><% counter = 0 %>
+            <% brand.cars.where(sale_status: "For Sale").each do %>
+                <% counter += 1 %>
+            <% end %>
+            <%= counter %>
+        </td>
+        <td><% counter = 0 %>
+            <% brand.cars.where(sale_status: "Sold").each do %>
+                <% counter += 1 %>
+            <% end %>
+            <%= counter %>
+        </td>
+        <td><%= link_to 'Edit', edit_brand_path(brand), remote: true %></td>
+        <td><%= link_to 'Destroy', brand, remote: true , method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
