--- a/app/views/brands/_form.html.erb
+++ b/app/views/brands/_form.html.erb
@@ -1,18 +1,26 @@
 <div class="row">
-  <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+  <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 col-lg-4 col-lg-offset-4">
+  <div style="background: white; border-radius: 13px; padding: 10px;">
+  <% if @brand.model.nil? %>
+    <h4 class="text-center">Add New Brand & Model</h4>
+  <% else %>
+    <h4 class="text-center">Edit Brand - Model</h4>
+  <% end %>
+  <hr>
 <%= form_with(model: @brand, remote: true) do |form| %>
 
   <div class="form-group">
-    <%= form.text_field :name, placeholder: "Brand...", class: "form-control input-lg" %>
+    <%= form.text_field :name, placeholder: "Brand...", class: "form-control input-lg", require: true %>
   </div>
 
   <div class="form-group">
-    <%= form.text_field :model, placeholder: "Model...", class: "form-control input-lg" %>
+    <%= form.text_field :model, placeholder: "Model...", class: "form-control input-lg", require: true %>
   </div>
 
   <div class="actions">
-    <%= form.submit "Set Brand - Model", class: "btn btn-primary btn-lg btn-block" %>
+    <%= form.submit "Set Brand - Model", class: "btn btn-primary btn-xl btn-block" %>
   </div>
 <% end %>
+</div>
 </div>
 </div>
