--- a/app/views/cars/_cars.html.erb
+++ b/app/views/cars/_cars.html.erb
@@ -7,6 +7,8 @@
       <th>Year</th>
       <th>Price</th>
       <th>Mileage</th>
+      <th>Sale Status</th>
+      <th>Sale Date</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +20,8 @@
         <td><%= car.year %></td>
         <td><%= number_to_currency car.features["Price"] %></td>
         <td><%= car.features["Mileage"] %></td>
+        <td><%= car.sale_status %></td>
+        <td><% unless car.sale_date.nil? %><%= car.sale_date.strftime('%Y-%m-%d at %H:%M') %><% end %></td>
         <td><%= link_to 'Show', car %></td>
         <td><%= link_to 'Edit', edit_car_path(car), remote: true %></td>
         <td><%= link_to 'Destroy', car, remote: true, method: :delete, data: { confirm: 'Are you sure?' } %></td>
