--- a/app/assets/stylesheets/bootstrap_override.scss
+++ b/app/assets/stylesheets/bootstrap_override.scss
@@ -95,3 +95,7 @@ section.devise {
 /*.navbar-custom {
     background-color: #222222;
 }*/
+
+.align-middle {
+    vertical-align: middle !important;
+}
