--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -30,8 +30,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :transmission, form.object.features["Transmission"] = "Automatic", required: true %> Automatic <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :transmission, form.object.features["Transmission"] = "Manual", required: true %> Manual <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :transmission, form.object.features["Transmission"] = "Automatic" %> Automatic <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :transmission, form.object.features["Transmission"] = "Manual"%> Manual <% end %>
               </div>
             </div>
           </div>
@@ -83,9 +83,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :fuel_type, form.object.features["Fuel Type"] = "Gasoline", required: true %> Gasoline <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :fuel_type, form.object.features["Fuel Type"] = "Diesel", required: true %> Diesel <% end %>
-              </div>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :fuel_type, form.object.features["Fuel Type"] = "Gasoline" %> Gasoline <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :fuel_type, form.object.features["Fuel Type"] = "Diesel"
             </div>
           </div>
 
@@ -98,17 +97,17 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "FWD", required: true %> FWD <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "4x4", required: true %> 4x4 <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "RWD", required: true %> RWD <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "AWD", required: true %> AWD <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "FWD" %> FWD <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "4x4" %> 4x4 <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "RWD" %> RWD <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :drive_type, form.object.features["Drive Type"] = "AWD" %> AWD <% end %>
               </div>
             </div>
           </div>
 
          <h5>Engine:</h5>
           <div class="form-group">
-            <%= o.label :features, style: "min-width: 100% !important;" do %><%= text_field_tag :engine, form.object.features["Engine"], class: "form-control input-lg", required: true %><% end %>
+            <%= o.label :features, style: "min-width: 100% !important;" do %><%= text_field_tag :engine, form.object.features["Engine"], class: "form-control input-lg" %><% end %>
           </div>
 
         <h5>Seats</h5> 
@@ -120,8 +119,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :seats, form.object.features["Seats"] = "Cloth Seats", required: true %> Cloth Seats <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :seats, form.object.features["Seats"] = "Leather Seats", required: true %> Leather Seats<% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :seats, form.object.features["Seats"] = "Cloth Seats" %> Cloth Seats <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :seats, form.object.features["Seats"] = "Leather Seats" %> Leather Seats<% end %>
               </div>
             </div>
           </div>
@@ -135,8 +134,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :cruise_control, form.object.features["Cruise Control"] = "Yes", required: true %> Yes <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :cruise_control, form.object.features["Cruise Control"] = "No", required: true %> No <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :cruise_control, form.object.features["Cruise Control"] = "Yes" %> Yes <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :cruise_control, form.object.features["Cruise Control"] = "No" %> No <% end %>
               </div>
             </div>
           </div>
@@ -150,9 +149,9 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :ac, form.object.features["AC"] = "Manual", required: true %> Manual <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :ac, form.object.features["AC"] = "Manual" %> Manual <% end %>
                   <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :ac, form.object.features["AC"] = "Climate Control" %> Climate Control <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :ac, form.object.features["AC"] = "No AC", required: true %> No AC<% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :ac, form.object.features["AC"] = "No AC" %> No AC<% end %>
               </div>
             </div>
           </div>
@@ -174,8 +173,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :rear_camera, form.object.features["Rear Camera"] = "Yes", required: true %> Yes <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :rear_camera, form.object.features["Rear Camera"] = "No", required: true %> No <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :rear_camera, form.object.features["Rear Camera"] = "Yes" %> Yes <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :rear_camera, form.object.features["Rear Camera"] = "No" %> No <% end %>
               </div>
             </div>
           </div>
@@ -189,8 +188,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :navigation, form.object.features["Navigation"] = "Yes", required: true %> Yes <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :navigation, form.object.features["Navigation"] = "No", required: true %> No <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :navigation, form.object.features["Navigation"] = "Yes" %> Yes <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :navigation, form.object.features["Navigation"] = "No" %> No <% end %>
               </div>
             </div>
           </div>
@@ -204,8 +203,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :cd_player, form.object.features["CD Player"] = "Yes", required: true %> Yes <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :cd_player, form.object.features["CD Player"] = "No", required: true %> No <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :cd_player, form.object.features["CD Player"] = "Yes" %> Yes <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :cd_player, form.object.features["CD Player"] = "No" %> No <% end %>
               </div>
             </div>
           </div>
@@ -219,8 +218,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :bluetooth, form.object.features["Bluetooth"] = "Yes", required: true %> Yes <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :bluetooth, form.object.features["Bluetooth"] = "No", required: true %> No <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :bluetooth, form.object.features["Bluetooth"] = "Yes" %> Yes <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :bluetooth, form.object.features["Bluetooth"] = "No" %> No <% end %>
               </div>
             </div>
           </div>
@@ -234,8 +233,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :usb, form.object.features["USB"] = "Yes", required: true %> Yes <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :usb, form.object.features["USB"] = "No", required: true %> No <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :usb, form.object.features["USB"] = "Yes" %> Yes <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :usb, form.object.features["USB"] = "No" %> No <% end %>
               </div>
             </div>
           </div>
@@ -249,9 +248,9 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :plug_12v, form.object.features["12 Volt Plug"] = "1x Front", required: true %> 1x Front <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :plug_12v, form.object.features["12 Volt Plug"] = "2x Front", required: true %> 2x Front <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :plug_12v, form.object.features["12 Volt Plug"] = "1x Front & 1x Rear", required: true %> 1x Front & 1x Rear <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :plug_12v, form.object.features["12 Volt Plug"] = "1x Front" %> 1x Front <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :plug_12v, form.object.features["12 Volt Plug"] = "2x Front" %> 2x Front <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :plug_12v, form.object.features["12 Volt Plug"] = "1x Front & 1x Rear" %> 1x Front & 1x Rear <% end %>
               </div>
             </div>
           </div>
@@ -265,9 +264,9 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :key, form.object.features["Key"] = "Classic Key", required: true %> Classic Key <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :key, form.object.features["Key"] = "Classic Key with Remote", required: true %> Classic Key w/ Remote <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :key, form.object.features["Key"] = "Keyless Ignition", required: true %> Keyless Ignition <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :key, form.object.features["Key"] = "Classic Key" %> Classic Key <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :key, form.object.features["Key"] = "Classic Key with Remote" %> Classic Key w/ Remote <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :key, form.object.features["Key"] = "Keyless Ignition" %> Keyless Ignition <% end %>
               </div>
             </div>
           </div>
@@ -281,8 +280,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_windows, form.object.features["Power Windows"] = "Yes", required: true %> Yes <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_windows, form.object.features["Power Windows"] = "No", required: true %> No <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_windows, form.object.features["Power Windows"] = "Yes" %> Yes <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_windows, form.object.features["Power Windows"] = "No" %> No <% end %>
               </div>
             </div>
           </div>
@@ -296,8 +295,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_door_locks, form.object.features["Power Door Locks"] = "Yes", required: true %> Yes <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_door_locks, form.object.features["Power Door Locks"] = "No", required: true %> No <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_door_locks, form.object.features["Power Door Locks"] = "Yes" %> Yes <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_door_locks, form.object.features["Power Door Locks"] = "No" %> No <% end %>
               </div>
             </div>
           </div>
@@ -311,8 +310,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_exterior_mirror, form.object.features["Power Exterior Mirrors"] = "Yes", required: true %> Yes <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_exterior_mirror, form.object.features["Power Exterior Mirrors"] = "No", required: true %> No <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_exterior_mirror, form.object.features["Power Exterior Mirrors"] = "Yes" %> Yes <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :power_exterior_mirror, form.object.features["Power Exterior Mirrors"] = "No" %> No <% end %>
               </div>
             </div>
           </div>
@@ -326,8 +325,8 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active">
               <div class="btn-group" data-toggle="buttons">
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :exterior_mirror_heating, form.object.features["Exterior Mirror Heating"] = "Yes", required: true %> Yes <% end %>
-                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :exterior_mirror_heating, form.object.features["Exterior Mirror Heating"] = "No", required: true %> No <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :exterior_mirror_heating, form.object.features["Exterior Mirror Heating"] = "Yes" %> Yes <% end %>
+                  <%= o.label :features, class: "btn btn-default btn-lg" do %><%= radio_button_tag :exterior_mirror_heating, form.object.features["Exterior Mirror Heating"] = "No" %> No <% end %>
               </div>
             </div>
           </div>
