--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<%= render 'cars/navbar' %>
 <div id="devise-box">
   <div id="signup-box">
     <h2 class="text-center" style="margin: 0;">Sign Up</h2>
