--- a/app/views/welcome/_navbar.html.erb
+++ b/app/views/welcome/_navbar.html.erb
@@ -32,6 +32,11 @@
                 <li>
                     <%= link_to "Contact", "#contact", class: "page-scroll" %>
                 </li>
+                <% if signed_in? && current_user %>
+                <li>
+                    <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+                </li>
+                <% end %>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
